force-app/main/default/objects/GecoJSO__c/GecoJSO__c.object-meta.xml
<CustomObject>
    <label>Geco JSO</label>
    <nameField>
        <displayFormat>JSO-{00000}</displayFormat>
        <label>Geco JSO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geco JSOs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>