force-app/main/default/objects/GecoJSO__c/fields/JobOrder__c.field-meta.xml
<CustomField>
    <fullName>JobOrder__c</fullName>
    <label>Job Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>