force-app/main/default/objects/GecoJSO__c/fields/JobSubOrder__c.field-meta.xml
<CustomField>
    <fullName>JobSubOrder__c</fullName>
    <label>Job Sub Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>