force-app/main/default/objects/GecoJSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobOrder__c</columns>
    <columns>JobSubOrder__c</columns>
    <columns>Chargeable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>